<resources>
    <string name="app_name">Legally</string>

    <string name="botonregresar">Botón para regresar</string>
    <string name="continuar">Continuar</string>
    <string name="iconoArticulo">Ícono artículo</string>
    <string name="nombreDelArticulo">Nombre del artículo</string>
    <string name="sn">S/N: XXXXX</string>
    <string name="detalles">Detalles:\n...</string>
    <string name="articuloPerdido">Artículo perdido</string>
    <string name="tipo">Tipo: %1$s</string>
    <string name="marcaNombre">%1$s %2$s</string>
    <string name="iconmisarts">iconMisArts</string>
    <string name="detalleDelArticulo">Detalle del artículo</string>
    <string name="user">Johan Sebastian Quintero</string>
    <string name="btnenviar">btnEnviar</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="noCompartas">No compartas información personal ni sensible con otros usuarios.</string>
    <string name="otpEnviado">Hemos enviado un código OTP a su correo electrónico. Ingrese el código para continuar con el restablecimiento de su contraseña.</string>
    <string name="restablecerContrasena">Restablecer contraseña</string>
    <string name="_0">0</string>
    <string name="otpIncorrecto">Código incorrecto. Por favor reinténtalo.</string>
    <string name="nuevaContrasena">Nueva contraseña</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="crearNuevaContrasena">Crear nueva contraseña</string>
    <string name="creaUnaNuevaContrasena">Crea una nueva contraseña</string>
    <string name="confirmaNuevaContrasena">Confirma la nueva contraseña</string>
    <string name="escogeUnArticulo">Escoge un artículo</string>
    <string name="aquiApareceran">Aquí aparecerán los artículos que registres en Legally.</string>
    <string name="registrarArticulos">Registrar artículos</string>
    <string name="informacionDeUsuario">Información de usuario</string>
    <string name="iconCheck">iconCheck</string>
    <string name="usuarioVerificado">Usuario verificado</string>
    <string name="iconHeart">iconHeart</string>
    <string name="LegallyDesde">Legally desde hace 1 año</string>
    <string name="iconStar">iconStar</string>
    <string name="haAyudado">Ha ayudado a 2 personas a recuperar sus artículos</string>
    <string name="reportarUsuario">Reportar usuario</string>
    <string name="iconWarning">iconWarning</string>
    <string name="verMapa">Ver mapa.</string>
    <string name="iconMapa">iconMapa</string>
    <string name="verificaArt">Verifica un artículo.</string>
    <string name="iconVerificar">iconVerificar</string>
    <string name="misArts">Mis artículos.</string>
    <string name="Legally">Legally</string>
    <string name="queQuieres">Qué quieres hacer hoy?</string>
    <string name="btnnotificacion">btnNotificacion</string>
    <string name="btnUser">btnUser</string>
    <string name="registraArts">Registra tus artículos.</string>
    <string name="iconRegistrar">iconRegistrar</string>
    <string name="creador">By Johan Sebastián Quintero</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="correoEjemplo">ejemplo@gmail.com</string>
    <string name="olvidasteContrasena">Olvidaste tu contraseña?</string>
    <string name="otrosLogin">Otras opciones de inicio de sesión</string>
    <string name="login">Iniciar sesión</string>
    <string name="btnGoogle">btnGoogle</string>
    <string name="btnFacebook">btnFacebook</string>
    <string name="btnBack">btnBack</string>
    <string name="registrarme">Registrarme</string>
    <string name="reintentalo">Por favor reinténtalo.</string>
    <string name="senalaUbicacion">Señala la ubicación dónde perdiste un articulo</string>
    <string name="mapa">Mapa</string>
    <string name="necesitasAyuda">Necesitas ayuda?</string>
    <string name="cambiarContrasena">Cambiar contraseña</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="misDatos">Mis datos</string>
    <string name="miCuenta">Mi cuenta</string>
    <string name="iconExit">iconExit</string>
    <string name="iconMisDatos">iconMisDatos</string>
    <string name="iconCambiarContrasena">iconCambiarContrasena</string>
    <string name="iconuser">iconUser</string>
    <string name="iconayuda">iconAyuda</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="mis_datos">Mis datos</string>
    <string name="cambiar_correo_electronico">Cambiar correo electrónico</string>
    <string name="cambiar_nombre_de_usuario">Cambiar nombre de usuario</string>
    <string name="cambiar_numero_de_telefono">Cambiar número de teléfono</string>
    <string name="iconsiguiente">iconSiguiente</string>
    <string name="icontriangulo">iconTriangulo</string>
    <string name="telefono">Número de teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="iconflor">iconFlor</string>
    <string name="aqui_encontraras_tus_notificaciones">Aquí encontrarás tus notificaciones.</string>
    <string name="buscar_articulo">Buscar artículo</string>
    <string name="mis_articulos">Mis artículos</string>
    <string name="reportar_usuario">Reportar usuario</string>
    <string name="cuentanos_que_sucede">Cuéntanos qué sucede</string>
    <string name="porque_reporte">Dinos por qué crees que se debería reportar a este usuario.</string>
    <string name="falso_reporte">Falso reporte</string>
    <string name="bullying">Bullying y acoso</string>
    <string name="estafa">Estafa</string>
    <string name="dejo_de_responder">Dejó de responder</string>
    <string name="enviar">Enviar</string>

    <string-array name="tipo_documento">
        <item>Tipo de Documento</item>
        <item>Cédula de Ciudadanía (CC)</item>
        <item>Tarjeta de Identidad (TI)</item>
        <item>Cédula de Extranjería (CE)</item>
        <item>Pasaporte (PA)</item>
        <item>Número de Identificación Tributaria (NIT)</item>
    </string-array>

    <string-array name="tipo_articulo">
        <item>Tipo de artículo</item>
        <item>Vehículo</item>
        <item>Electrodoméstico</item>
        <item>Tecnología</item>
        <item>Otros</item>
    </string-array>

</resources>