<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/informacionUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionUsuario"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/botonregresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_bold"
        android:freezesText="false"
        android:text="@string/informacionDeUsuario"
        android:textColor="@color/principal"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/userDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:paddingHorizontal="0dp"
        android:paddingTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userTitle">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imguser"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:src="@drawable/userperfilimg" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/nombre"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/principal"
            android:textSize="28sp"
            android:paddingVertical="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/check"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/iconCheck"
                app:srcCompat="@drawable/check_big" />

            <TextView
                android:id="@+id/usuarioverificado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/almost_black"
                android:text="@string/usuarioVerificado" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/heart"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/iconHeart"
                app:srcCompat="@drawable/heart_02" />

            <TextView
                android:id="@+id/legallydesde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/almost_black"
                android:text="@string/LegallyDesde" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/star"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/iconStar"
                app:srcCompat="@drawable/star1" />

            <TextView
                android:id="@+id/haayudado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="50dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/almost_black"
                android:text="@string/haAyudado" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnReportarUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/warning"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/iconWarning"
                app:srcCompat="@drawable/triangle_warning" />

            <TextView
                android:id="@+id/reportar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:text="@string/reportarUsuario"
                android:fontFamily="@font/poppins"
                android:textColor="@color/red"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>