<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/InicioSesion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion"
    android:background="@color/white">

    <TextView
        android:id="@+id/LegallyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Legally"
        android:textColor="@color/principal"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/iconStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star" />

    <LinearLayout
        android:id="@+id/TabInicioRegistro"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/IniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textColor="@color/almost_black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Registrarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/poppins"
            android:text="@string/registrarme"
            android:textColor="@color/almost_black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/loginScrollable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toBottomOf="@+id/TabInicioRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/UsuarioTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/usuario"
                android:textColor="@color/principal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsuarioInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@null"
                android:fontFamily="@font/poppins"
                android:hint="@string/correoEjemplo"
                android:paddingHorizontal="10dp"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/contraseñaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/contrasena"
                android:textColor="@color/principal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ContraseñaInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Olvidastecontraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins"
                android:text="@string/olvidasteContrasena"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/almost_black" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="25dp"
                android:fontFamily="@font/poppins"
                android:text="@string/reintentalo"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/BtnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/principal"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <TextView
                android:id="@+id/OtrasOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/otrosLogin"
                android:textColor="@color/almost_black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/BotonesInicioSesionAlterno"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/BtnGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/btnGoogle"
                    android:paddingHorizontal="5dp"
                    app:srcCompat="@drawable/google" />

                <ImageView
                    android:id="@+id/BtnFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/btnFacebook"
                    android:paddingHorizontal="5dp"
                    app:srcCompat="@drawable/facebook" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/inicioSesionExitosoOverlay"
        layout="@layout/inicio_sesion_exitoso"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>